[metadata]
name = django-simple-pwa
version = 2.2.1
description = A simple Django app to develope and deploy a Progressive Web Application (PWA).
long_description = file: README.rst
url = https://github.com/bambier/django-simple-pwa
author = Bambier 
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content 


[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.7